<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bedoya.esau.calculos.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal">

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:background="@drawable/udea">

       </LinearLayout>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="match_parent">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/etiqueta"
               android:textSize="16dp"
               android:textStyle="bold"
               android:textAlignment="center"/>
       </LinearLayout>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nro1"
                android:inputType="numberDecimal"
                android:textSize="12dp"
                android:id="@+id/eNro1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nro2"
                android:inputType="numberDecimal"
                android:textSize="12dp"
                android:id="@+id/eNro2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:id="@+id/rSel">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/suma"
                        android:textSize="12dp"
                        android:id="@+id/rSuma"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/resta"
                        android:textSize="12dp"
                        android:id="@+id/rResta"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/multi"
                        android:textSize="12dp"
                        android:id="@+id/rMulti"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/division"
                        android:textSize="12dp"
                        android:id="@+id/rDivision"
                        android:onClick="onRadioButtonClicked"/>


                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/calcular"
                android:id="@+id/bCalcular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textSize="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:id="@+id/tResultado"/>


        </LinearLayout>
        


    </LinearLayout>

</LinearLayout>
